public interface Collision {
    public void collide(GameCollider c, Direction d);
}
