package collisions.updateables;

import colliders.updateables.BouncerCollider;

public interface BouncerCollision extends MovableEntityCollision {
    public BouncerCollider getCollider();
}
