@startuml Updateables

abstract BaseCollision

interface Collision
interface BouncerCollision
interface MovableEntityCollision
interface UpdateableEntityCollision

UpdateableEntityCollision .u.|> Collision
BouncerCollision .u.|> MovableEntityCollision

FireBallCollision .u.> BouncerCollision
FireBallCollision -u-|> BaseCollision
FireBallCollision "1" --> "1" FireBallCollider

@enduml